creatint node scripts to compile sass file and copy vendors

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 src/node_modules/
 src/vendor/
 .idea/
+src/style/style.css
+src/style/style.css.map
+web/Public/js/jquery.min.js
+web/Public/js/bootstrap.min.js
