--- a/src/package.json
+++ b/src/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "This project's goal is to create a community driven and open source PHP framework which makes it easy and fast to develope webpages. It uses the newest PHP and Bootstrap. The project wants to be the most secure and easiest to use PHP framework.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "composer install"
+    "start": "node build.js",
+    "postinstall": "composer install",
+    "copy": "node copy.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,9 @@
     "animate.css": "^3.6.1",
     "apache-server-configs": "^2.15.0",
     "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1"
+    "copy": "^0.3.1",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.7.2",
+    "watch": "^1.0.2"
   }
 }
