--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ web/Public/js/jquery.min.js
 web/Public/js/bootstrap.min.js
 src/phpDocumentor.phar
 docs/
+src/style/style.min.css
+src/style/style.min.css.map
+web/Public/css/style.min.css
+web/Public/css/style.min.css.map
