--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,9 @@
     "start": "node build.js",
     "postinstall": "composer install",
     "copy": "node copy.js",
-    "gd": "php phpDocumentor.phar -d ..\\web\\ --template=\"clean\" --template=\"checkstyle\" -t ..\\docs\\"
+    "gd": "php phpDocumentor.phar -d ..\\web\\ --template=\"clean\" --template=\"checkstyle\" -t ..\\docs\\",
+    "php-check": "vendor\\squizlabs\\php_codesniffer\\bin\\phpcs ..\\web\\ --standard=PSR2 --report=summary --extensions=php --colors ",
+    "php-fix": "vendor\\squizlabs\\php_codesniffer\\bin\\phpcbf --standard=PSR2 --extensions=php ..\\web\\"
   },
   "repository": {
     "type": "git",
