--- a/src/package.json
+++ b/src/package.json
@@ -30,8 +30,11 @@
     "apache-server-configs": "^2.15.0",
     "bootstrap": "^4.0.0",
     "copy": "^0.3.1",
+    "bootstrap": "^4.1.1",
+    "copy": "^0.3.2",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
+    "node-sass": "^4.9.0",
     "watch": "^1.0.2"
   }
 }
