--- a/src/composer.json
+++ b/src/composer.json
@@ -2,5 +2,10 @@
   "require-dev": {
     "phpunit/phpunit": "7.*",
     "squizlabs/php_codesniffer": "3.2.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "EasyPHP\\": "./../web/EasyPHP"
+    }
   }
 }
