--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-src/node_modules/
-src/vendor/
 .idea/
-src/style/style.css
-src/style/style.css.map
-web/Public/js/jquery.min.js
-web/Public/js/bootstrap.min.js
-src/phpDocumentor.phar
-docs/
-src/style/style.min.css
-src/style/style.min.css.map
-web/Public/css/style.min.css
-web/Public/css/style.min.css.map
-
-web/Logs/
-
-web/Public/css/animate\.css
-
 vendor/
+web/Logs/
+*.css
+*.map
