--- a/.styleci.yml
+++ b/.styleci.yml
@@ -11,6 +11,7 @@ enabled:
   - property_separation
   - align_equals
   - concat_with_spaces
+  - unary_operator_spaces
 disabled:
   - unalign_equals
   - concat_without_spaces
