--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   },
   "autoload": {
     "psr-4": {
-      "EasyPHP\\": "./web/EasyPHP"
+      "EasyPHP\\": "./server/EasyPHP"
     }
   },
   "scripts": {
